fix alignment

--- a/app/assets/stylesheets/full.css.scss
+++ b/app/assets/stylesheets/full.css.scss
@@ -84,7 +84,7 @@ header {
 	text-transform: uppercase;	
 	img {
 		float: left;
-		margin: 15px 20px 0 0;
+		margin: 14px 20px 0 0;
 	}
 }
 
